--- a/preamble.tex
+++ b/preamble.tex
@@ -148,6 +148,8 @@
 \newcommand{\NN}{\mathbb{N}}
 \renewcommand{\emptyset}{\varnothing}
 
+\newcommand{\numvars}{m}
+
 %inequalities
 \renewcommand{\geq}{\geqslant}
 \renewcommand{\leq}{\leqslant}
